--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "nodemon": "^2.0.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
